# clfortran

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
scripts/: clean_src.sh  config.sh
src/: CMakeLists.txt  clfortran.f90  clfortran_hl.f90
tests/: CMakeLists.txt  test_clfortran_hl.f90  test_create_device_context.f90  test_query_platforms_devices.f90  test_sum.f90
